@@ -216,6 +216,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
   submitted the form.
 * (bug 27893) Edit-on-doubleclick now applies only on view and purge actions;
   no longer triggers unexpectedly on delete, history etc.
+* (bug 28417) Fix PHP notice when importing revision without a listed id
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
